--- a/app/views/components/_flash.html.slim
+++ b/app/views/components/_flash.html.slim
@@ -1,3 +1,5 @@
 - flash.each do |key, value|
-  div class="alert alert-#{ key }"
+  div class="alert alert-#{ key } alert-dismissible fade show" role="alert"
     = value
+    button type="button" class="close" data-dismiss="alert" aria-label="Close"
+      span aria-hidden="true" &times;
