--- a/app/views/invoices/sales/new.html.slim
+++ b/app/views/invoices/sales/new.html.slim
@@ -1,3 +1,4 @@
-h1 Factura > nuevo
+= render 'components/breadcrumb',
+         links: [[invoices_sales_path, 'Facturas de Venta'], ['Nuevo']]
 
 = render 'form'
