--- a/app/views/thirds/clients/_form.html.slim
+++ b/app/views/thirds/clients/_form.html.slim
@@ -1,4 +1,4 @@
 = form_with model: @client do |f|
   = render '/thirds/form_fields', f: f
   
-  = f.submit 'Guardar'
+  = f.submit 'Guardar', class: 'btn btn-primary'
