--- a/app/views/thirds/clients/contacts/_form.html.slim
+++ b/app/views/thirds/clients/contacts/_form.html.slim
@@ -1,15 +1,22 @@
 = form_with model: [@client, @contact] do |f|
-  
-  = f.label :full_name
-  = f.text_field :full_name
+  .form-group.row
+    = f.label :full_name, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.text_field :full_name, class: 'form-control'
 
-  = f.label :phone
-  = f.text_field :phone
+  .form-group.row
+    = f.label :phone, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.text_field :phone, class: 'form-control'
 
-  = f.label :cellphone
-  = f.text_field :cellphone
+  .form-group.row
+    = f.label :cellphone, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.text_field :cellphone, class: 'form-control'
 
-  = f.label :email
-  = f.text_field :email
+  .form-group.row
+    = f.label :email, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.text_field :email, class: 'form-control'
 
-  = f.submit 'Guardar'
+  = f.submit 'Guardar', class: 'btn btn-primary'
