--- a/app/views/thirds/clients/contacts/index.html.slim
+++ b/app/views/thirds/clients/contacts/index.html.slim
@@ -1,13 +1,10 @@
-h1 Cliente > #{@client.name} > contactos
+= render 'components/breadcrumb',
+         links: [ [clients_path, 'Clientes'], 
+           [edit_client_path(@client), @client.name], 
+           ['Contactos'] ]
 
-table
-  tr
-    th Nombre
-    th 
-  tbody
-    - @contacts.each do |contact|
-      tr
-        td = contact.full_name
-        td = link_to 'Editar', edit_client_contact_path(@client, contact)
-
-= link_to 'nuevo', new_client_contact_path
+= link_to 'nuevo', new_client_contact_path, class: 'btn btn-primary'
+= render 'components/table',
+         records: @contacts,
+         new_record: new_client_contact_path,
+         edit_arg: [@client]
