--- a/app/views/invoices/activities/calls/new.html.slim
+++ b/app/views/invoices/activities/calls/new.html.slim
@@ -1,3 +1,7 @@
-h1 Factura > #{@sale.code} > Actividades > nueva llamada
+= render 'components/breadcrumb',
+         links: [[invoices_sales_path, 'Facturas de Venta'],
+          [edit_invoices_sale_path(@sale), @sale.code],
+          [invoices_sale_activities_path(@sale), 'Actividades'],
+          ['Nueva Llamada']]
 
 = render 'form'
