--- a/app/views/invoices/activities/visits/_form.html.slim
+++ b/app/views/invoices/activities/visits/_form.html.slim
@@ -1,11 +1,5 @@
 = form_with model: [@sale, @visit] do |f|
 
-  = f.label :collector
-  = f.collection_select :collector_id,
-                        User.all,
-                        :id,
-                        :name
-
   = render '/invoices/activities/common_field', f: f
   
-  = f.submit 'Guardar'
+  = f.submit 'Guardar', class: 'btn btn-primary'
