--- a/app/views/invoices/activities/calls/_form.html.slim
+++ b/app/views/invoices/activities/calls/_form.html.slim
@@ -1,9 +1,13 @@
 = form_with model: [@sale, @call] do |f|
 
   = render '/invoices/activities/common_field', f: f
-  br
-  = f.label :call_outcome
-  = f.select :call_outcome,
-             Activities::Call.call_outcomes.keys.map{ |c| [c.titleize, c] }
 
-  = f.submit 'Guardar'
+  .form-group.row
+    = f.label :call_outcome, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.select :call_outcome,
+                 Activities::Call.call_outcomes.keys.map{ |c| [c.titleize, c] },
+                 {},
+                 { class: 'form-control' }
+
+  = f.submit 'Guardar', class: 'btn btn-primary'
