--- a/app/views/invoices/activities/todos/edit.html.slim
+++ b/app/views/invoices/activities/todos/edit.html.slim
@@ -1,3 +1,9 @@
+= render 'components/breadcrumb',
+         links: [[invoices_sales_path, 'Facturas de Venta'],
+          [edit_invoices_sale_path(@sale), @sale.code],
+          [invoices_sale_activities_path(@sale), 'Actividades'],
+          ['Tareas']]
+
 h1 Factura > #{@sale.code} > Actividades > editar tarea
 
 = render 'form'
