--- a/app/views/invoices/activities/index.html.slim
+++ b/app/views/invoices/activities/index.html.slim
@@ -13,22 +13,14 @@ hr
       = render 'invoices/activities/components/third_contacts', sale: @sale
 
   .col-md-9
-    ul.nav.nav-tabs
-      li.nav-item
-        = link_to 'Actividades', invoices_sale_activities_path(@sale), class: 'nav-link active'
-      li.nav-item
-        = link_to 'Llamadas', invoices_sale_activities_calls_path(@sale), class: 'nav-link'
-      li.nav-item
-        = link_to 'Email', invoices_sale_activities_emails_path(@sale), class: 'nav-link'
-      li.nav-item
-        = link_to 'Promesas de Pago', invoices_sale_activities_payment_promises_path(@sale), class: 'nav-link'
-      li.nav-item
-        = link_to 'Tareas', invoices_sale_activities_todos_path(@sale), class: 'nav-link'
+    = render 'invoices/activities/components/nav_tabs', sale: @sale
     .tab-content
       br
       - if @activities.exists?
         - @activities.each do |activity|
           = render activity
+        
+        == pagy_bootstrap_nav(@pagy)
       - else
         .alert.alert-secondary role="alert"
           | No se han reportado actividades, presiona <a href="#" class="alert-link">aqui</a> para crear una.
