--- a/app/views/invoices/activities/calls/index.html.slim
+++ b/app/views/invoices/activities/calls/index.html.slim
@@ -17,12 +17,14 @@ hr
     = render 'invoices/activities/components/nav_tabs', sale: @sale
     .tab-content
       br
-      - if @calls.exists?
+      - if @activities.exists?
         .text-right
           = link_to 'Nueva Llamada', new_invoices_sale_activities_call_path(@sale), class: 'btn btn-primary'
         br
-        - @calls.each do |call|
+        - @activities.each do |call|
           = render 'invoices/activities/calls/call', call: call
+        
+        == pagy_bootstrap_nav(@pagy)
       - else
         .alert.alert-secondary role="alert"
           | No se han reportado actividades, presiona <a href="#{new_invoices_sale_activities_call_url(@sale)}" class="alert-link">aqui</a> para crear una.
