--- a/app/views/invoices/activities/payment_promises/index.html.slim
+++ b/app/views/invoices/activities/payment_promises/index.html.slim
@@ -17,12 +17,14 @@ hr
     = render 'invoices/activities/components/nav_tabs', sale: @sale
     .tab-content
       br
-      - if @payment_promises.exists?
+      - if @activities.exists?
         .text-right
           = link_to 'Nueva Promesa de Pago', new_invoices_sale_activities_payment_promise_path(@sale), class: 'btn btn-primary'
         br
-        - @payment_promises.each do |payment_promise|
+        - @activities.each do |payment_promise|
           = render 'invoices/activities/payment_promises/payment_promise', payment_promise: payment_promise
+
+        == pagy_bootstrap_nav(@pagy)
       - else
         .alert.alert-secondary role="alert"
           | No se han reportado actividades, presiona <a href="#{new_invoices_sale_activities_payment_promise_url(@sale)}" class="alert-link">aqui</a> para crear una.
