--- a/app/views/invoices/activities/todos/index.html.slim
+++ b/app/views/invoices/activities/todos/index.html.slim
@@ -17,12 +17,14 @@ hr
     = render 'invoices/activities/components/nav_tabs', sale: @sale
     .tab-content
       br
-      - if @todos.exists?
+      - if @activities.exists?
         .text-right
           = link_to 'Nueva Tarea', new_invoices_sale_activities_todo_path(@sale), class: 'btn btn-primary'
         br
-        - @todos.each do |todo|
+        - @activities.each do |todo|
           = render 'invoices/activities/todos/todo', todo: todo
+
+        == pagy_bootstrap_nav(@pagy)
       - else
         .alert.alert-secondary role="alert"
           | No se han reportado actividades, presiona <a href="#{new_invoices_sale_activities_todo_url(@sale)}" class="alert-link">aqui</a> para crear una.
