--- a/app/views/invoices/activities/visits/index.html.slim
+++ b/app/views/invoices/activities/visits/index.html.slim
@@ -17,12 +17,14 @@ hr
     = render 'invoices/activities/components/nav_tabs', sale: @sale
     .tab-content
       br
-      - if @visits.exists?
+      - if @activities.exists?
         .text-right
           = link_to 'Nueva Visita', new_invoices_sale_activities_visit_path(@sale), class: 'btn btn-primary'
         br
-        - @visits.each do |visit|
+        - @activities.each do |visit|
           = render 'invoices/activities/visits/visit', visit: visit
+
+        == pagy_bootstrap_nav(@pagy)
       - else
         .alert.alert-secondary role="alert"
           | No se han reportado actividades, presiona <a href="#{new_invoices_sale_activities_visit_url(@sale)}" class="alert-link">aqui</a> para crear una.
