fixed align to the header

--- a/app/views/invoices/activities/emails/_email.html.slim
+++ b/app/views/invoices/activities/emails/_email.html.slim
@@ -1,10 +1,10 @@
 - email = presenter(email)
 .card
   .card-body
-    .card-title
+    .card-title.d-flex
       i.fas.fa-envelope
-    .text-right
-      = email.created
+      .ml-auto
+        = email.created
     = email.description
   .card-footer
     =link_to 'Editar', edit_invoices_sale_activities_email_path(@sale, email)
