--- a/app/views/invoices/activities/calls/_call.html.slim
+++ b/app/views/invoices/activities/calls/_call.html.slim
@@ -1,10 +1,10 @@
 - call = presenter(call)
 .card
   .card-body
-    .card-title
+    .card-title.d-flex
       i.fas.fa-phone-volume
-    .text-right
-      = call.created
+      .ml-auto
+        = call.created
     = call.description
   .card-footer
     =link_to 'Editar', edit_invoices_sale_activities_call_path(@sale, call)
