--- a/app/views/invoices/activities/payment_promises/_payment_promise.html.slim
+++ b/app/views/invoices/activities/payment_promises/_payment_promise.html.slim
@@ -1,10 +1,10 @@
 - payment_promise = presenter(payment_promise)
 .card
   .card-body
-    .card-title
+    .card-title.d-flex
       i.fas.fa-money-bill
-    .text-right
-      = payment_promise.created
+      .ml-auto
+        = payment_promise.created
     = payment_promise.description
   .card-footer
     =link_to 'Editar', edit_invoices_sale_activities_payment_promise_path(@sale, payment_promise)
