--- a/app/views/invoices/activities/todos/_todo.html.slim
+++ b/app/views/invoices/activities/todos/_todo.html.slim
@@ -1,10 +1,10 @@
 - todo = presenter(todo)
 .card
   .card-body
-    .card-title
+    .card-title.d-flex
       i.fas.fa-tasks
-    .text-right
-      = todo.created
+      .ml-auto
+        = todo.created
     = todo.description
   .card-footer
     =link_to 'Editar', edit_invoices_sale_activities_todo_path(@sale, todo)
