--- a/app/views/invoices/activities/visits/_visit.html.slim
+++ b/app/views/invoices/activities/visits/_visit.html.slim
@@ -1,10 +1,10 @@
 - visit = presenter(visit)
 .card
   .card-body
-    .card-title
+    .card-title.d-flex
       i.fas.fa-motorcycle
-    .text-right
-      = visit.created
+      .ml-auto
+        = visit.created
     = visit.description
   .card-footer
     =link_to 'Editar', edit_invoices_sale_activities_visit_path(@sale, visit)
