--- a/app/views/thirds/clients/index.html.slim
+++ b/app/views/thirds/clients/index.html.slim
@@ -2,4 +2,4 @@
          links: [['Clientes']]
 
 = link_to 'nuevo', new_client_path, class: 'btn btn-primary'
-= render 'components/table', records: @clients
+= render 'components/table', records: @thirds
