--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,17 +1,4 @@
-h1 Tareas
+= render 'components/breadcrumb',
+         links: [['Tareas']]
 
-table
-  tr
-    th Nombre
-    th Description
-    th Factura
-    th Fecha de ejecucion
-    th 
-  tbody
-    - @tasks.each do |task|
-      tr
-        td = task.type
-        td = task.description
-        td = link_to task.invoice_code, edit_invoices_sale_path(task.invoice)
-        td = task.remember
-        td = link_to 'Editar', '#'
+= render 'components/table', records: @tasks, presenter_class: TaskPresenter
