added nav to clients

--- a/app/views/thirds/clients/contacts/edit.html.slim
+++ b/app/views/thirds/clients/contacts/edit.html.slim
@@ -4,4 +4,5 @@
            [client_contacts_path(@client),'Contactos'],
            [@contact.full_name] ]
 
-= render 'form'
+= render 'components/navbar_clients' do
+  = render 'form'
