--- a/app/views/thirds/clients/invoices/index.html.slim
+++ b/app/views/thirds/clients/invoices/index.html.slim
@@ -1,8 +1,8 @@
 = render 'components/breadcrumb',
          links: [ [clients_path, 'Clientes'], 
            [edit_client_path(@client), @client.name], 
-           [client_contacts_path(@client),'Contactos'],
-           ['Nuevo'] ]
+           ['Facturas'] ]
 
 = render 'components/navbar_clients' do
-  = render 'form'
+  = render 'components/table',
+            records: @invoices
