--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,3 +1,4 @@
-h1 Usuarios > #{@user.name} > editar
+= render 'components/breadcrumb',
+         links: [[users_path, 'Usuarios'], ['Editar']]
 
 = render 'form'
