--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -3,21 +3,26 @@ h2 Registrate
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
   
-  .field
-    = f.label 'Nombre de la empresa'
-    = f.text_field :enterprise_name, autofocus: true, autocomplete: 'email'
+  .form-group.row
+    = f.label 'Nombre de la empresa', class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.text_field :enterprise_name, autofocus: true, autocomplete: 'email', class: 'form-control'
 
-  .field
-    = f.label :email_field
-    = f.email_field :email, autofocus: true, autocomplete: 'email'
+  .form-group.row
+    = f.label :email_field, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
 
-  .field
-    = f.label :password
-    = f.password_field :password, autocomplete: "new-password"
+  .form-group.row
+    = f.label :password, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.password_field :password, autocomplete: "new-password", class: 'form-control'
 
-  .field
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation, autocomplete: "new-password"
+  .form-group.row
+    = f.label :password_confirmation, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
 
   .actions
-    = f.submit 'Registrarme'
+    = f.submit 'Registrarme', class: 'btn btn-primary'
+    = link_to 'atras', new_user_session_path
