--- a/app/views/invoices/sales/edit.html.slim
+++ b/app/views/invoices/sales/edit.html.slim
@@ -5,3 +5,5 @@
 
 br
 = link_to 'Actividades', invoices_sale_activities_path(@sale), class: 'btn btn-primary'
+br
+= link_to 'Pagos', invoices_sale_payments_path(@sale), class: 'btn btn-primary'
