--- a/app/views/invoices/activities/_common_field.slim
+++ b/app/views/invoices/activities/_common_field.slim
@@ -15,6 +15,11 @@
                { class: 'form-control' }
 
 .form-group.row
+  = f.label :title, class: 'col-sm-2 col-form-label'
+  .col-sm-10
+    = f.text_field :title, class: 'form-control'
+
+.form-group.row
   = f.label :description, class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.text_area :description, class: 'form-control'
@@ -25,9 +30,19 @@
     = f.date_select :date_activity
 
 .form-group.row
+  = f.label :remind, class: 'col-sm-2 col-form-label'
+  .col-sm-10
+    = f.check_box :remind
+
+.form-group.row
   = f.label :remember, class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.datetime_select :remember
+
+.form-group.row
+  = f.label :due_date, class: 'col-sm-2 col-form-label'
+  .col-sm-10
+    = f.datetime_select :due_date
 
 .form-group.row
   = f.label :collection_advisor, class: 'col-sm-2 col-form-label'
